--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
-                            The community <br> from whm?
+                            This community <br> is for whom ?
                         </h2>
 
                         <p class="about__description">
-                            The community is for passionate and hard working ,productive and skilled people or people that have different ideas witch they see can change or help the society all kind of people : students , disabled people … men / women so what are you waiting to be a member of us ? …. Take the action and build your dreams with us 
+                            The community is for passionate and hard working ,productive and skilled people or people that have different ideas which they see can change or help the society all kind of people : students , disabled people … men / women so what are you waiting to be a member of us ? …. Take the action and build your dreams with us 
                         </p>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    you can apply for it by filling the application out in this website
+                                    you can apply for it by filling the application out below in this website
                                 </p>
                             </div>
                         </div>
@@ -223,7 +223,9 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    All thanks and appreciation for your keenness to make the application more useful to you and the rest of the people 
+                              All thanks and appreciation for your keenness to make the application more useful to you and the rest of the people 
+                               If you have an idea that you want to tell us about, please go to the Contact Us button 
+                               Then write your idea and send it to us to be studied
                                 </p>
                             </div>
                         </div>
